--- a/manuscript/methods.qmd
+++ b/manuscript/methods.qmd
@@ -25,7 +25,9 @@ library(gt)
 
 tar_load(daily_temp, store = here::here(tar_config_get("store")))
 
-temp <- daily_temp |>
+daily_temp2 <- as.data.frame(daily_temp)
+
+temp <- daily_temp2 |>
       mutate(month = month(date),
              year = year(date)) %>%
       filter(month %in% c(5, 6, 7, 8, 9),
