refine introduction section: clarify the impact of multiple global change drivers on biodiversity in grassland ecosystems, emphasizing the effects of temperature and nitrogen deposition on plant productivity and species interactions

--- a/manuscript/introduction.qmd
+++ b/manuscript/introduction.qmd
@@ -17,7 +17,7 @@ library(tarchetypes)
 
 <!--# Old text: The vast majority of empirical global change studies focus on only one, or perhaps two drivers, and rarely assess interactions [@rillig2019role; @Zandalinas2021-gp]. This is problematic because such studies may underestimate the overall pressures on biodiversity, thereby limiting our ability to predict the consequences of projected climate and environmental changes [@Speiser2022-st; @Komatsu2019-yr; @rillig2019role; @Oliver2014-wy]. To improve our understanding of global change impacts on biodiversity and ecosystem functioning, now and in the future, we therefore urgently need studies that explicitly consider multiple global change drivers and their interactions.  -->
 
-*\[Mechanism\]* Biodiversity in grassland vegetation is impacted worldwide by multiple global change drivers [@Speiser2022-st]. Plant productivity generally responds to abiotic conditions, in particular temperature and precipitation [@craine2012timing]. In ecosystems, where temperature is a limiting factor for productivity, a warmer climate will thus often result in increased plant growth, leading to more standing biomass [@elmendorf2012plot; @fazlioglu2021warming], with a positive feedback to productivity (@fig-concept a). These vegetation changes have implications for biodiversity, operating via changes in the nature and intensity of species interactions within plant communities. Along environmental gradients, as climate warms and biomass increases, we expect a shift from the facilitative plant-plant interactions that tend to dominate under high environmental stress towards the competitive interactions characteristic of more environmentally benign conditions, in line with the ‘Stress Gradient Hypothesis’; see e.g. [@bertness1994positive; @he2013global]. These shifts in the direction and intensity of the dominant plant-plant interactions in response to warming may again lead to changes in species composition and diversity, with lower-stature and less competitive specialist species decreasing in abundance and diversity as they are exposed to increased competition from a taller and denser vegetation sward [@Vandvik2020-hu; @Alexander2015-gu; @lynn2023traits; @winkler2019responses]. This effect may be exacerbated if they are exposed to more competitive range-shifting lowland generalists (REFs). Another global change driver with major impacts on the structure and diversity of terrestrial ecosystems, is atmospheric nitrogen deposition [@Ipbes2019-sd]. In grassland vegetation, where plant growth and biomass is limited by nutrients, the specific effects of added nitrogen tend to be similar to those of increased temperature; increased growth, taller and denser vegetation, and intensified competition for limited resources [@yue2020changes; @Humbert2016-wg] (@fig-concept a). Accordingly, when grasslands vegetation is exposed to both warming and nitrogen addition, both drivers have qualitatively similar effects on plant productivity and diversity [@yue2020changes].
+*\[Mechanism\]* Biodiversity in grassland vegetation is impacted worldwide by multiple global change drivers [@Speiser2022-st]. Plant productivity generally responds to abiotic conditions, in particular temperature and precipitation [@craine2012timing]. In ecosystems, where temperature is a limiting factor for productivity, a warmer climate will thus often result in increased plant growth, leading to more standing biomass [@elmendorf2012plot; @fazlioglu2021warming], with a positive feedback to productivity (@fig-concept a). These vegetation changes have implications for biodiversity, operating via changes in the nature and intensity of species interactions within plant communities. Along environmental gradients, as climate warms and biomass increases, we expect a shift from the facilitative plant-plant interactions that tend to dominate under high environmental stress towards the competitive interactions characteristic of more environmentally benign conditions, in line with the ‘Stress Gradient Hypothesis’; see e.g. [@bertness1994positive; @he2013global]. These shifts in the direction and intensity of the dominant plant-plant interactions in response to warming may again lead to changes in species composition and diversity, with lower-stature and less competitive specialist species decreasing in abundance and diversity as they are exposed to increased competition from a taller and denser vegetation sward [@Vandvik2020-hu; @Alexander2015-gu; @lynn2023traits; @winkler2019responses]. This effect may be exacerbated if they are exposed to more competitive range-shifting lowland generalists (REFs). Another global change driver with major impacts on the structure and diversity of terrestrial ecosystems, is atmospheric nitrogen deposition [@Ipbes2019-sd]. In grassland vegetation, where plant growth and biomass is limited by nutrients, the specific effects of added nitrogen tend to be similar to those of increased temperature; increased growth, taller and denser vegetation, and intensified competition for limited resources [@yue2020changes; @Humbert2016-wg] (@fig-concept a). Accordingly, when grassland vegetation is exposed to both warming and nitrogen addition, both drivers have qualitatively similar effects on plant productivity and diversity [@yue2020changes].
 
 <!--# [Mechanism] In alpine vegetation, including grassland, heath, and tundra, plant productivity is generally temperature limited and warmer climate will thus often result in increased plant growth, leading to more standing biomass [@elmendorf2012plot; @fazlioglu2021warming], with a positive feedback to productivity (@fig-concept a). These vegetation changes have implications for biodiversity, operating via changes in the nature and intensity of species interactions within alpine plant communities. In particular, as climate warms and biomass increases, we expect a shift from the facilitative plant-plant interactions that tend to dominate under high environmental stress towards the competitive interactions characteristic of more environmentally benign conditions, in line with the ‘Stress Gradient Hypothesis’; see e.g. [@bertness1994positive; @he2013global]. These shifts in the direction and intensity of the dominant plant-plant interactions in response to warming may again lead to changes in species composition and diversity, with lower-stature and less competitive alpine specialist species decreasing in abundance and diversity as they are exposed to increased competition for light from a taller and denser vegetation sward, an effect that may be exacerbated if they are exposed to more competitive range-shifting lowland generalists [@Vandvik2020-hu; @Alexander2015-gu; @lynn2023traits; @winkler2019responses]. Another global change driver with major impacts on the structure and diversity of terrestrial ecosystems, including alpine vegetation, is atmospheric nitrogen deposition [@Ipbes2019-sd]. As plant growth and biomass in alpine vegetation is often co-limited by temperature and nutrients [@Korner2003-kg], the specific effects of added nitrogen tend to be similar to those of increased temperature; increased growth, taller and denser vegetation, and intensified competition for light [@Humbert2016-wg] (@fig-concept a). Accordingly, an experiment that combined warming and nitrogen addition treatments in alpine vegetation found that both drivers have qualitatively similar effects; increased plant growth and loss of diversity via increased competition for light [@Klanderud2005-yx]. -->
 
