--- a/manuscript/methods.qmd
+++ b/manuscript/methods.qmd
@@ -99,11 +99,11 @@ To test if warming, nitrogen addition and clipping affect plant diversity at the
 
 <!--# How to explain this? -->
 
-We ran the analysis for standing biomass and diversity indices (described above) first across both sites including site as a co-variate and then separately for the alpine and sub-alpine site. We used this approach, because the two site differed strongly in their productivity and diversity and how they respond to the three global change drivers and we were interested to understand if different drivers play different roles at the tow sites.
+We ran the analysis for standing biomass and diversity indices (described above) first across both sites including site as a co-variate and then separately for the alpine and sub-alpine site. We used this approach, because the two sites differed strongly in their productivity and diversity and how they respond to the three global change drivers and we were interested to understand if different drivers play different roles at the two sites.
 
 <!--# From here we ran all analysis for final biomass/diversity and change in biomass/diversity (log ratio). Do we want to keep both of these analysis? They are similar, but some differences... -->
 
-To test the relationship between standing biomass and Shannon diversity, we run a fixed effects linear model with a normal error distribution. Diveresity was the response and the interaction of standing biomass and site the predictors. (We also ran it with warming as predictor... should we describe both models or just one of them...?). (Justify, why we ignore the other drivers here?).
+To test the relationship between standing biomass and Shannon diversity, we run a fixed effects linear model with a normal error distribution. Diversity was the response and the interaction of standing biomass and site the predictors. (We also ran it with warming as predictor... should we describe both models or just one of them...?). (Justify, why we ignore the other drivers here?).
 
 To test if the three global change drivers affect Shannon diversity through the same mechanisms, i.e. standing biomass, we first tested how important it was to include the interactions of the three global change drivers were in the model. For this we compared three linear models with Shannon diversity as response and including the following predictors: 1) only the main effects, warming, nitrogen addition and clipping, 2) the main effects and their interactions of these drivers, and 3) the main effects and standing biomass (log transformed). We ran these models separately for each site and compared them using AIC values (@tbl-var-explained). At the alpine site, adding standing biomass or the interactions between the drivers improved the model equally well, by ca. 2.5 AIC units. However at the sub-alpine site, the best model was the main effects model only. For consistency, we decided to drop the interactions of the global change drivers from further.
 
