Update figure caption to remove the two across site plots

--- a/manuscript/SEM_output.qmd
+++ b/manuscript/SEM_output.qmd
@@ -49,7 +49,7 @@ Standing biomass was twice as high at the sub-alpine (`r bio$mean[2]` ± `r bio$
 #| warning: false
 #| fig-width: 8
 #| fig-height: 13
-#| fig-cap: Standing biomass across sites (g m^-2^) (a), and standing biomass analysed separately by site (b), Shannon diversity across sites (c), and Shannon diversity analysed separately by site (d) with increasing nitrogen addition (kg N ha^-1^ y^-1^) in the alpine (upper row) and sub-alpine (lower row) sites. The x axis is log transformed, the numbers are on the original scale for ease of interpretation. The colors indicate ambient (grey) and warm conditions (pink) and the shapes show the different grazing treatments (circle = control, square = medium, triangle = intensive grazing). The points show the raw data, while the lines indicate model predictions with confidence intervals. The capital letters within panels indicate significant (black) model terms (W = warming, N = nitrogen addition, C = cutting, S = site, combined letters, e.g. WxC = interactions).
+#| fig-cap: Standing biomass (g m^-2^) (a) and Shannon diversity (b) with increasing nitrogen addition (kg N ha^-1^ y^-1^) in the alpine (upper row) and sub-alpine (lower row) sites. The x axis is log transformed, the numbers are on the original scale for ease of interpretation. The colors indicate ambient (grey) and warm conditions (pink) and the shapes show the different grazing treatments (circle = control, square = medium, triangle = intensive grazing). The points show the raw data, while the lines indicate model predictions with confidence intervals. The capital letters within panels indicate significant (black) model terms (W = warming, N = nitrogen addition, C = cutting, S = site, combined letters, e.g. WxC = interactions).
 
 tar_read(bio_div_figure, store = here::here(tar_config_get("store")))
 
